3.1.0 2022xxxx
  CR: Platform: Optimization / enhancement of function compact
  CR: Platform: Optimization of notification message output 

3.0.0 20211126
  CR: License: Changed to Apache License Version 2.0
  CR: Project: Change from Ant to .NET
  CR: Platform: Added function compact
      Cleans the temp directory on the virtual disk and shrinks the disk in general.
      e.g. platform.exe B: compact
  CR: Platform: Added function shortcuts
      Creates the usual calls as shortcuts.
      e.g. platform.exe B: shortcuts
  CR: Settings: Added for placeholder replacement in files
      This simplifies the personalization , distribution, migrations and updates.

2.1.0 2019XXXX
  CR: Added support for VHDX and BitLocker
  NT: More details have been lost

2.0.0 2015XXXX
  CR: Change from SUBST to virtual disk VHD
  NT: More details have been lost
  
1.0.0 20XXXXXX
  NT: More details have been lost
  NT: Release is available