@@ -1,4 +1,6 @@
 3.1.0 2022xxxx
+  BF: Settings: Correction of template synchronization
+      If the target file is newer than the template, the template will be updated.
   CR: Platform: Optimization / enhancement of function compact
   CR: Platform: Optimization of notification message output 
 
